# mediRecord

./: .env.example  .gitignore  compose.yml
containers/containerfiles/: frontend.dev.containerfile  frontend.prod.containerfile  service.dev.containerfile  service.prod.containerfile
containers/init/: mongo-init.js
frontend/: index.html  package.json  pnpm-lock.yaml  tsr.config.json  vite.config.ts
frontend/src/: App.tsx  __root.tsx  index.css  index.route.tsx  layout.tsx  main.tsx  routeTree.gen.ts  router.tsx
frontend/src/appointments/: index.route.tsx
frontend/src/billing/: index.route.tsx
frontend/src/billing/application/: billing.application.tsx
frontend/src/components/: appSidebar.tsx  expandable-card-list.tsx  h4.tsx  search-input.tsx  selectField.tsx
frontend/src/components/ui/: accordion.tsx  button-variants.ts  button.tsx  calendar.tsx  card.tsx  dialog.tsx  field.tsx  select.tsx  sheet.tsx  sidebar.tsx  textarea.tsx
frontend/src/consts/: const_global.ts  const_patients.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: appointments.ts  patients.ts
frontend/src/pages/: __root.tsx  index.lazy.tsx
frontend/src/pages/appointments/: index.lazy.tsx
frontend/src/pages/appointments/application/: appointments.application.tsx  calendar.application.tsx
frontend/src/pages/appointments/presentation/: appointmentForm.presentation.tsx  calendar.presentation.tsx
frontend/src/pages/appointments/presentation/appointmentForm/: appointmentForm_initialState.ts  appointmentForm_types.ts
frontend/src/pages/appointments/presentation/calendar/: appointmentDetails.tsx  appointmentPill.tsx  calendar_constants.ts  calendar_functions.ts  calendar_types.ts  mobileStatusStrip.tsx  monthView.tsx  scheduleView.tsx  selectionMenu.tsx  timeGridView.tsx
frontend/src/pages/billing/: index.lazy.tsx
frontend/src/pages/billing/application/: billing.application.tsx
frontend/src/pages/home/application/: home.application.tsx
frontend/src/pages/patients/: index.lazy.tsx
frontend/src/pages/patients/application/: creationForm.application.tsx  patients.application.tsx
frontend/src/pages/patients/presentation/: advancedFilter.tsx  creationForm.presentation.tsx  patients.presentation.tsx
frontend/src/pages/patients/presentation/creationForm/: creationForm_initialState.ts  creationForm_types.ts
frontend/src/patient/: index.route.tsx  patient.route.tsx
frontend/src/patient/application/: patient.application.tsx
frontend/src/patient/presentation/: form.presentation.tsx
frontend/src/patients/: index.route.tsx
frontend/src/patients/application/: creationForm.application.tsx  patients.application.tsx
frontend/src/patients/presentation/: creationForm.presentation.tsx
frontend/src/patients/presentation/creationForm/: creationForm_enums.ts  creationForm_initialState.ts
frontend/src/types/: appointments_type.ts  patients_type.ts  type_patients.ts
services/: .pylintrc  pyproject.toml  pyrefly.toml  requirements.default
services/api-gateway/src/: main.py
services/api-gateway/src/controllers/: appointmentsController.py  patientsController.py  proxyController.py
services/api-gateway/src/routers/: appointmentsRoute.py  patientsRoute.py
services/appointments-service/src/: main.py
services/appointments-service/src/constants/: global_constants.py
services/appointments-service/src/controllers/: appointmentsController.py  constantsController.py
services/appointments-service/src/core/: database.py
services/appointments-service/src/models/: appointment.py
services/auth-service/src/core/: database.py  models_registry.py
services/auth-service/src/entities/: role.py  user.py
services/patients-service/src/: main.py
services/patients-service/src/constants/: global_constants.py
services/patients-service/src/controllers/: constantsController.py  patientsController.py
services/patients-service/src/core/: database.py
services/patients-service/src/models/: base.py  embedded.py  enums.py  patient.py
