# ============================================================================
# Backend Python Project Configuration
# ============================================================================
# DESIGN PRINCIPLES ENFORCED:
# 1. Single Responsibility Principle (SRP)
#    - Each controller manages only one domain entity
#    - Complexity limits prevent functions doing too much
#    - Max 7 arguments, 12 branches, 50 statements per function
#
# 2. Separation of Concerns (SoC)
#    - Layer separation: Controller, Model, Schema, Type, Service
#    - Import rules prevent cross-layer violations (TID, TCH)
#    - Clear boundaries between responsibilities
#
# 3. Principle of Least Surprise (PoLS)
#    - Consistent naming conventions (N)
#    - Type annotations for predictability (ANN)
#    - Clear error messages and return types (EM, RET)
# ============================================================================

[project]
name = "agrilynx-backend"
version = "1.0.0"
description = "AgriLynx Pro - Agricultural Inventory Management Backend"
readme = "README.md"
requires-python = ">=3.11"

# ============================================================================
# Ruff Configuration
# ============================================================================

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length (PoLS - consistent formatting)
line-length = 120

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable comprehensive rule sets organized by design principle
select = [
    # ===== Code Quality & Style (PoLS) =====
    "E",   # pycodestyle errors - consistent style
    "W",   # pycodestyle warnings - consistent style
    "F",   # Pyflakes - catch common errors

    # ===== Import Management (SoC) =====
    "I",   # isort - organize imports by layer
    "TID", # flake8-tidy-imports - prevent cross-layer imports
    "ICN", # flake8-import-conventions - consistent imports
    "TCH", # flake8-type-checking - separate type imports

    # ===== Naming Conventions (PoLS) =====
    "N",   # pep8-naming - predictable naming

    # ===== Type Safety (PoLS) =====
    "ANN", # flake8-annotations - type hints for predictability
    "UP",  # pyupgrade - modern type hints

    # ===== Security =====
    "S",   # flake8-bandit (security)

    # ===== Code Quality & Simplicity (SRP) =====
    "B",   # flake8-bugbear - detect likely bugs
    "C4",  # flake8-comprehensions - simpler code
    "SIM", # flake8-simplify - reduce complexity
    "PIE", # flake8-pie - avoid common pitfalls
    "RET", # flake8-return - clear return patterns

    # ===== Function Complexity Limits (SRP) =====
    "PL",  # Pylint - includes complexity checks
           # PLR0911: too many return statements
           # PLR0912: too many branches
           # PLR0913: too many arguments
           # PLR0915: too many statements

    # ===== Error Handling (PoLS) =====
    "BLE", # flake8-blind-except - specific exceptions
    "EM",  # flake8-errmsg - clear error messages
    "TRY", # tryceratops - better exception handling
    "RSE", # flake8-raise - proper exception raising

    # ===== Code Cleanliness =====
    "A",   # flake8-builtins - don't shadow builtins
    "ARG", # flake8-unused-arguments - remove dead code
    "ERA", # eradicate - remove commented code
    "T10", # flake8-debugger - no debug statements
    "T20", # flake8-print - no print statements

    # ===== Additional Quality Rules =====
    "FBT", # flake8-boolean-trap - avoid confusing booleans
    "DTZ", # flake8-datetimez - timezone aware dates
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]

# Ignore only rules that conflict with formatter or are too restrictive
# We keep complexity checks ENABLED to enforce SRP
ignore = [
    # Docstrings - optional for now
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__

    # Type annotations - these are too strict
    "ANN401", # Dynamically typed expressions (Any) - sometimes needed

    # Formatter conflicts - must ignore
    "COM812", # Trailing comma (conflicts with formatter)
    "ISC001", # Implicit string concatenation (conflicts with formatter)
]

# ===== COMPLEXITY LIMITS (SRP - Single Responsibility Principle) =====
[tool.ruff.lint.pylint]
max-args = 7              # Maximum number of function arguments
max-branches = 12         # Maximum branches (if/else) in function
max-returns = 6           # Maximum return statements in function
max-statements = 50       # Maximum statements in function body

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Allow unused imports
"test_*.py" = ["S101", "PLR2004"]  # Allow asserts and magic values in tests
"**/tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indent with spaces
indent-style = "space"

# ============================================================================
# MyPy Configuration
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "normal"
show_error_codes = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# Black Configuration (alternative to Ruff format)
# ============================================================================

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

# ============================================================================
# isort Configuration (if not using Ruff's isort)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
